# AndroidPlayground

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/wedream/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/lottie/: data.json
app/src/main/cpp/: CMakeLists.txt  cal-lib.cpp  free_type.cpp  gl_code.cpp  native_color.cpp  native_color.h
app/src/main/cpp/util/: LogUtil.h
app/src/main/java/com/wedream/demo/: MainActivity.kt
app/src/main/java/com/wedream/demo/algo/: ActionListener.kt  AlgorithmRunner.kt  VisualizationView.kt
app/src/main/java/com/wedream/demo/app/: AppModule.kt  BaseActivity.kt  CategoryActivity.kt  CrashHandler.kt  DeviceParams.kt  DisposableActivity.kt  MainModule.kt  MainViewModel.kt  MyApplication.kt  MyCrashHandler.kt  MySharePreference.kt  PermissionHelper.kt
app/src/main/java/com/wedream/demo/category/: Category.kt  CategoryAdapter.kt  ComponentCategory.kt
app/src/main/java/com/wedream/demo/common/: CommonAdapter.kt
app/src/main/java/com/wedream/demo/compose/: ComposeActivity.kt
app/src/main/java/com/wedream/demo/concurrent/: JavaExecutorActivity.kt  PreloadTask.kt
app/src/main/java/com/wedream/demo/inject/: AccessId.kt  AnnotationTestActivity.kt  ClassLoaderActivity.kt  Delegate.kt  FiledInjectActivity.kt  Inject.kt
app/src/main/java/com/wedream/demo/investment/: BTCPredictActivity.kt  NewsEntity.java  NewsListAdapter.kt  NewsManager.kt  NewsSpider.kt
app/src/main/java/com/wedream/demo/jni/: GL2JNIActivity.kt  GL2JNILib.kt  (+3 more)
app/src/main/proto/: AssetModel.proto
app/src/main/res/drawable/: edit_pop_window_top_bar.xml  hesuan_time_bytedance.xml  hesuan_time_yuekangma.xml  simple_border.xml  tab_indicator_bg.xml
app/src/main/res/layout/: acitivity_constraint_layout.xml  activity_algorithm_detail.xml  activity_anr_handle.xml  activity_audio_record.xml  activity_bad_window_token.xml  activity_btc_predict.xml  activity_canvas.xml  activity_canvas_bitmap.xml  activity_category.xml  activity_color_filter.xml  activity_color_hue.xml  activity_color_matrix.xml  activity_coroutine.xml  activity_crash_handler.xml  activity_cross_group_move.xml  activity_detach_view.xml  activity_draw_path.xml  activity_draw_text.xml  activity_draw_view.xml  activity_event_dispatch.xml  activity_flow.xml  activity_flow_ui.xml  activity_font.xml  activity_function_programming.xml  activity_hello_jni.xml  activity_hesuan.xml  activity_horizontal_scroll.xml  activity_inercept_event.xml  activity_java_executor.xml  activity_linked_list.xml  activity_lottie.xml  activity_matrix_demo.xml  activity_new_multi_track.xml  activity_new_tips.xml  activity_outline.xml  activity_plane_geometry.xml  activity_recycler.xml  activity_refresh_rate.xml  activity_rxjava.xml  activity_scale.xml  (+30 more)
app/src/main/res/raw/: vertex_array_shader.glsl
app/src/main/res/values/: array.xml  attrs.xml  color_resources.xml  colors.xml  ids.xml  styles.xml
app/src/test/java/com/wedream/demo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+447 files in other folders)
